# diagramly-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  diagram-generation.md  pyproject.toml  run_test_example.sh
.github/workflows/scripts/: create-release-packages.sh
docs/: README.md  docfx.json  index.md  quickstart.md
scripts/bash/: check-prerequisites.sh  diagram-dsl-to-image.sh
scripts/powershell/: check-prerequisites.ps1  diagram-dsl-to-image.ps1
src/diagramly_cli/: __init__.py
templates/commands/: diagram.md  image.md
templates/dsl/: drawio-general-prompts.md  graphviz-general-prompts.md  markmap-mindmap-prompts.md  mermaid-flowchart-prompts.md  mermaid-gantt-prompts.md  mermaid-general-prompts.md  mermaid-mindmap-prompts.md  mermaid-sequence-prompts.md  plantuml-class-prompts.md  plantuml-general-prompts.md  plantuml-sequence-prompts.md  plantuml-usecase-prompts.md  prompt-config-manager.md  prompt-manager.md  zenuml-general-prompts.md
test_diagrams/: comprehensive_test.sh  sample.dot  sample.mm  sample.mmd  sample.puml  sample.xml  sample.zenuml  test_encoding.sh  test_report.md
