[project]
name = "diagramly-cli"
version = "0.0.20"
description = "Diagramly CLI, part of Diagramly Kit. A tool to transform user intentions into visual diagrams automatically."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
diagramly = "diagramly_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagramly_cli"]
